# second_brain

./: .dockerignore  .env.example  .gitignore  DECISIONS.md  README.md  TODO.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile.dev  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: __init__.py  app_setting.py  ask_run.py  audit_log.py  base.py  decision.py  draft_reply.py  email_message.py  embedding.py  file_asset.py  idea.py  media_artifact.py  memory.py  open_question.py  person.py  processing_run.py  project.py  raw_item.py  relationship.py  tag.py  task.py
backend/app/prompts/: ask.md  book_brief.md  draft_reply.md  extraction.md  extraction_repair.md
backend/app/schemas/: ask.py  extraction.py  graph.py  memory.py  raw_item.py
backend/app/services/: ask_service.py  book_brief_service.py  document_ingestion_service.py  draft_reply_service.py  embedding_service.py  extraction_service.py  file_service.py  folder_watcher.py  github_service.py  gitlab_service.py  gmail_poller.py  (+9 more)
backend/migrations/: env.py
backend/tests/: test_archive_filtering.py  test_ask_routes.py  test_draft_reply_service.py  test_extraction_fixtures.py  test_extraction_service.py  test_file_inputs.py  test_github_service.py  test_gitlab_service.py  test_gmail_service.py  test_graph_insights_service.py  test_item_uploads.py  test_media_analysis_service.py  test_processing_queue_service.py  test_project_brief_service.py  test_project_routes.py  test_review_routes.py  test_settings_routes.py
(+91 files in other folders)
